--- a/nginx-proxy-manager/docker-compose.yml
+++ b/nginx-proxy-manager/docker-compose.yml
@@ -22,21 +22,21 @@ services:
       # Uncomment this if IPv6 is not enabled on your host
       # DISABLE_IPV6: 'true'
 
-  tailscale:
-    container_name: tailscale
-    hostname: dietpi
-    image: tailscale/tailscale:stable
-    env_file:
-      - .env
-    volumes:
-      - ./tailscale:/var/lib # State data will be stored in this directory
-      - /dev/net/tun:/dev/net/tun # Required for tailscale to work
-    cap_add: # Required for tailscale to work
-      - net_admin
-      - sys_module
-    command: tailscaled
-    privileged: true
-    restart: unless-stopped
+  # tailscale:
+  #   container_name: tailscale
+  #   hostname: dietpi
+  #   image: tailscale/tailscale:stable
+  #   env_file:
+  #     - .env
+  #   volumes:
+  #     - ./tailscale:/var/lib # State data will be stored in this directory
+  #     - /dev/net/tun:/dev/net/tun # Required for tailscale to work
+  #   cap_add: # Required for tailscale to work
+  #     - net_admin
+  #     - sys_module
+  #   command: tailscaled
+  #   privileged: true
+  #   restart: unless-stopped
 
 
 
@@ -51,5 +51,21 @@ services:
         - .env
       restart: unless-stopped
       
-
- 
+  goaccess:
+      image: 'xavierh/goaccess-for-nginxproxymanager:latest'
+      container_name: goaccess
+      restart: always
+      ports:
+          - '7880:7880'
+      environment:
+          - TZ=Europe/Istanul         
+          - SKIP_ARCHIVED_LOGS=False #optional
+          - DEBUG=False #optional
+          - BASIC_AUTH=False #optional
+          - BASIC_AUTH_USERNAME=user #optional
+          - BASIC_AUTH_PASSWORD=pass #optional   
+          - EXCLUDE_IPS=127.0.0.1 #optional - comma delimited 
+          - LOG_TYPE=NPM #optional - more information below
+      volumes:
+      - ./data/logs:/opt/log
+      # - /path/to/host/custom:/opt/custom #optional, required if using log_type = CUSTOM
